# mnuh

./: LICENSE  README.md  mnuh.cabal
app/: Main.hs
bench/: MnuhBench.hs
data/: cmudict-0.7b.phones
src/: CMUDict.hs
src/Sources/: AZLyrics.hs  Books.hs
test/: CMUDictSpec.hs
