name:                mnuh
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/cmika/mnuh#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Mika
maintainer:          chrismika93@gmail.com
copyright:           2017 Chris Mika
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CMUDict, Sources.AZLyrics
  build-depends:       base >= 4.7 && < 5
                     , bytestring-trie
                     , bytestring
                     , attoparsec
                     , http-conduit
                     , tagsoup
  ghc-options:         -Wall
  default-language:    Haskell2010

executable mnuh-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mnuh
  default-language:    Haskell2010

test-suite mnuh-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mnuh
                     , hspec
                     , attoparsec
                     , bytestring
                     , bytestring-trie
  other-modules:       CMUDictSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

benchmark mnuh-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             MnuhBench.hs
  build-depends:       base
                     , mnuh
                     , criterion
                     , bytestring
  ghc-options:         -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cmika/mnuh
